--- a/css/index.css
+++ b/css/index.css
@@ -3,23 +3,16 @@
       opacity: 1;
     /* width: 265px; */
     width: 159px;
-    margin-right: 8px;
+    margin-right: 12px;
     }
     .roo253{
-      -webkit-font-smoothing: antialiased;
-    --rem: 16;
-    color: #5a5a5a;
-    letter-spacing: 0.01071em;
-    box-sizing: inherit;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    font: inherit;
     border: 0;
     margin: 0;
     padding: 0;
     font-size: 100%;
     vertical-align: baseline;
     margin-bottom: 24px;
-    height: 102px;
+    height: 112px;
     width: 100%;
     position: relative;
     margin-bottom: 24px;
@@ -133,8 +126,6 @@
     justify-content: center;
     }
     .roo261{
-      -webkit-font-smoothing: antialiased;
-    --rem: 16;
     letter-spacing: 0.01071em;
     text-align: center;
     box-sizing: inherit;
@@ -142,8 +133,6 @@
     font: inherit;
     border: 0;
     margin: 0;
-    font-size: 100%;
-    vertical-align: baseline;
     top: -9px;
     right: 20px;
     width: 131px;
@@ -156,16 +145,16 @@
     }
     .roo262{
       top: -20px;
-    left: -20px;
-    right: -20px;
-    bottom: -20px;
-    filter: drop-shadow(0px 0px 20px rgba(255, 255, 255, 0.3));
-    z-index: 10;
-    position: absolute;
-    transition: .3s ease;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+      left: -20px;
+      right: -20px;
+      bottom: -20px;
+      filter: drop-shadow(0px 0px 20px rgba(255, 255, 255, 0.3));
+      z-index: 10;
+      position: absolute;
+      transition: .3s ease;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
     }
     .roo264::before {
     inset: 0px;
@@ -198,7 +187,7 @@
     margin: initial;
     position: absolute;
     }
-    .roo267{
+    /* .roo267{
       background-color: #2196f3;
     text-align: center;
     color: white;
@@ -231,8 +220,80 @@
     top: 60px;
     left: -15px;
   
+} */
+.roo266 > span {
+  background: #2196f3 !important;
+}
+.roo266:after {
+  border-top-color: #2196f3 !important;
+}
+.roo266 > span:before {
+  background: #2196f3 !important;
+}
+@media (min-width: 900px){
+
+.roo267 {
+    top: -6.1px;
+    left: 20px;
+    width: initial;
+    margin: initial;
+    z-index: 10;
+    position: absolute;
+    box-shadow: 1px 1px 5px #1c1f31b5;
+    border-radius: 0px 8px 0px 0px;
+}
+}
+@media (min-width: 900px){
+
+.roo267 > span {
+    width: 106px;
+    display: block;
+    padding: 10px 8px 8px;
+    position: relative;
+    font-size: 24px;
+    background: #60af5a;
+    text-align: center;
+    font-weight: 700;
+    line-height: 1;
+    border-radius: 0px 8px 0px 0px;
+}
+}
+.roo267 > span > p {
+  opacity: 0.7;
+  line-height: 14px;
+}
+@media (min-width: 600px){
+
+.roo267 > span {
+    padding: 10px 8px 8px;
+}
 }
 
+@media (min-width: 900px){
+.roo267 > span:before {
+    top: 0;
+    left: -6px;
+    width: 6px;
+    height: 6px;
+    content: "";
+    display: initial;
+    position: absolute;
+    background: #60af5a;
+}
+}
+@media (min-width: 900px){
+.roo267:after {
+    left: 0;
+    width: 0;
+    height: 0;
+    content: "";
+    display: initial;
+    position: absolute;
+    border-top: 10px solid #60af5a;
+    border-left: 53px solid transparent;
+    border-right: 53px solid transparent;
+}
+}
     .roo266{
       -webkit-font-smoothing: antialiased;
     --rem: 16;
@@ -712,6 +773,80 @@
 
       .fad.fa-inverse {
         color: #fff;
+      }
+
+      .t4021396e-a0db-4f78-ba61-7c7b160b8b98 {
+        color: #fff;
+        background: #222;
+        border: 1px solid transparent;
+      }
+
+      .t4021396e-a0db-4f78-ba61-7c7b160b8b98.place-top {
+        margin-top: -10px;
+      }
+      .t4021396e-a0db-4f78-ba61-7c7b160b8b98.place-top::before {
+        border-top: 8px solid transparent;
+      }
+      .t4021396e-a0db-4f78-ba61-7c7b160b8b98.place-top::after {
+        border-left: 8px solid transparent;
+        border-right: 8px solid transparent;
+        bottom: -6px;
+        left: 50%;
+        margin-left: -8px;
+        border-top-color: #222;
+        border-top-style: solid;
+        border-top-width: 6px;
+      }
+
+      .t4021396e-a0db-4f78-ba61-7c7b160b8b98.place-bottom {
+        margin-top: 10px;
+      }
+      .t4021396e-a0db-4f78-ba61-7c7b160b8b98.place-bottom::before {
+        border-bottom: 8px solid transparent;
+      }
+      .t4021396e-a0db-4f78-ba61-7c7b160b8b98.place-bottom::after {
+        border-left: 8px solid transparent;
+        border-right: 8px solid transparent;
+        top: -6px;
+        left: 50%;
+        margin-left: -8px;
+        border-bottom-color: #222;
+        border-bottom-style: solid;
+        border-bottom-width: 6px;
+      }
+
+      .t4021396e-a0db-4f78-ba61-7c7b160b8b98.place-left {
+        margin-left: -10px;
+      }
+      .t4021396e-a0db-4f78-ba61-7c7b160b8b98.place-left::before {
+        border-left: 8px solid transparent;
+      }
+      .t4021396e-a0db-4f78-ba61-7c7b160b8b98.place-left::after {
+        border-top: 5px solid transparent;
+        border-bottom: 5px solid transparent;
+        right: -6px;
+        top: 50%;
+        margin-top: -4px;
+        border-left-color: #222;
+        border-left-style: solid;
+        border-left-width: 6px;
+      }
+
+      .t4021396e-a0db-4f78-ba61-7c7b160b8b98.place-right {
+        margin-left: 10px;
+      }
+      .t4021396e-a0db-4f78-ba61-7c7b160b8b98.place-right::before {
+        border-right: 8px solid transparent;
+      }
+      .t4021396e-a0db-4f78-ba61-7c7b160b8b98.place-right::after {
+        border-top: 5px solid transparent;
+        border-bottom: 5px solid transparent;
+        left: -6px;
+        top: 50%;
+        margin-top: -4px;
+        border-right-color: #222;
+        border-right-style: solid;
+        border-right-width: 6px;
       }
  
     /* <style> */
@@ -2568,8 +2703,7 @@
         line-height: 1.25rem;
       }
       .roo215 {
-        width: 20px;
-        height: 20px;
+        padding: 24px 16px 24px 16px;
       }
       .roo216 {
         gap: 10px;
@@ -2791,6 +2925,14 @@
       }
       .roo255 {
         background: #2c2852 !important;
+            top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    overflow: hidden;
+    position: absolute;
+    border-radius: 6px;
       }
       .roo255 input[type='number']::-webkit-inner-spin-button,
       .roo255 input[type='number']::-webkit-outer-spin-button {
@@ -2830,10 +2972,11 @@
         line-height: 1.25rem;
         /* margin-right: 39px; */
       }
-      .roo263 {
-        width: 1.25rem;
-        height: 1.25rem;
+     
+        .roo263 {
+          padding: 30px 16px;
       }
+      
       .roo264 {
         display: flex;
         align-items: center;
@@ -2856,7 +2999,7 @@
         color: white;
         font-weight: 700;
       }
-      .roo267 {
+      /* .roo267 {
         color: #82f528;
         font-size: 0.875rem;
         font-weight: 500;
@@ -2900,7 +3043,7 @@
     display: initial;
     position: absolute;
     background: #60af5a;
-}}
+}} */
 
 
       .roo268 {
@@ -3122,7 +3265,7 @@
           height: 130px;
           background-size: cover;
           width: 159px;
-          margin-right: 11px;
+          margin-right: 14px;
         }
       }
       @media (min-width: 812px) {
@@ -3264,6 +3407,17 @@
         flex-direction: column;
         justify-content: center;
       }
+      .roo110{
+        gap: 4px;
+    width: fit-content;
+    display: flex;
+    padding: 16px;
+    background: rgb(25, 25, 57);
+    align-items: center;
+    border-radius: 12px;
+    flex-direction: row;
+    justify-content: center;
+      }
       .roo11:before {
         top: 0;
         left: 0;
@@ -3297,6 +3451,17 @@
       }
       .roo15 {
         width: 100%;
+      }
+      .roo117{
+        gap: 4px;
+        width: fit-content;
+        display: flex;
+        padding: 24px;
+        background: rgb(25, 25, 57);
+        align-items: center;
+        border-radius: 12px;
+        flex-direction: row;
+        justify-content: center;
       }
     /* <style data-jss="" data-meta="MuiAppBar"> */
       .MuiAppBar-root {
@@ -3729,6 +3894,23 @@
         display: flex;
         flex-direction: column;
       }
+
+      .css-hyb3x4{
+        font-family: Roboto;
+    line-height: 1.4375em;
+    box-sizing: border-box;
+    cursor: text;
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    width: 100%;
+    position: relative;
+    background-color: rgb(25, 25, 57);
+    border-radius: 12px;
+    font-size: 1rem;
+    font-weight: 400;
+    color: rgb(255, 255, 255);
+      }
       @media (min-width: 600px) {
         .roo72 {
           gap: 32px;
@@ -3748,6 +3930,7 @@
         font-size: 0.75rem;
         font-weight: 500;
       }
+      /*                          */
       .roo76 {
         flex-grow: 1;
       }
@@ -3757,6 +3940,7 @@
           align-self: start;
         }
       }
+      /*  */
       .roo77 {
         gap: 8px;
         display: flex;
@@ -3764,6 +3948,80 @@
         flex-direction: row;
         justify-content: start;
       }
+      .css-1sjntgj.css-1sjntgj.css-1sjntgj {
+        padding-right: 32px;
+    }
+    .css-1sjntgj.MuiSelect-select {
+      height: auto;
+      min-height: 1.4375em;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+  }
+  .css-1sjntgj {
+    appearance: none;
+    user-select: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font: inherit;
+    letter-spacing: inherit;
+    color: currentcolor;
+    border: 0px;
+    box-sizing: content-box;
+    background: none;
+    margin: 0px;
+    -webkit-tap-highlight-color: transparent;
+    display: block;
+    min-width: 0px;
+    width: 100%;
+    animation-name: mui-auto-fill-cancel;
+    animation-duration: 10ms;
+    padding: 10px 14px;
+    height: 24px;
+}
+.css-1k3x8v3 {
+  bottom: 0px;
+  left: 0px;
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+  width: 100%;
+  box-sizing: border-box;
+}
+.css-5xa7ru {
+  user-select: none;
+  width: 1em;
+  height: 1em;
+  overflow: hidden;
+  text-align: center;
+  flex-shrink: 0;
+  font-size: 1.5rem;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  border-radius: 8px;
+  position: absolute;
+  right: 7px;
+  top: calc(50% - 0.5em);
+  pointer-events: none;
+  color: rgba(0, 0, 0, 0.54);
+}
+.css-igs3ac {
+  border: transparent;
+  text-align: left;
+  position: absolute;
+  inset: -5px 0px 0px;
+  margin: 0px;
+  padding: 0px 8px;
+  pointer-events: none;
+  border-radius: inherit;
+  border-style: solid;
+  border-width: 1px;
+  overflow: hidden;
+  min-width: 0%;
+}
       .roo78 > g {
         stroke: #b4a6e2;
       }
@@ -3942,6 +4200,29 @@
         flex-direction: row;
         justify-content: center;
     }
+    .roo115{
+      gap: 4px;
+    width: fit-content;
+    display: flex;
+    padding: 24px;
+    background: rgb(25, 25, 57);
+    align-items: center;
+    border-radius: 12px;
+    flex-direction: row;
+    justify-content: center;
+    }
+
+    .roo116 {
+      gap: 4px;
+      width: fit-content;
+      display: flex;
+      padding: 24px;
+      background: rgb(25, 25, 57);
+      align-items: center;
+      border-radius: 12px;
+      flex-direction: row;
+      justify-content: center;
+  }
     /* <style data-jss="" data-meta="makeStyles"> */
       .roo1 {
         flex: 1;
@@ -5524,14 +5805,14 @@
       }
       @media (min-width: 900px) {
         .roo196 {
-          width: 159px;
-          margin-right: 11px;
+          width: 159.9px;
+          margin-right: 14px !important;
           height: 96px;
         }
       }
       @media (min-width: 678px) {
         .roo195 {
-          width: 177px;
+          width: 159.913px;
           margin-right: 11px;
           height: 96px;
         }
@@ -5540,11 +5821,42 @@
       .roo121 {
         padding: 24px 16px 24px 16px;
       } */
-      .background{
- background-image: url(/images/backgroung.avif);
- background-position: center;
- background-size: cover;
- background-repeat: no-repeat;
+    
+
+      @media (min-width: 600px){
+
+.roo5:after {
+    top: 94px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: "";
+    opacity: 1;
+    z-index: -2;
+    position: absolute;
+    max-height: 700px;
+    background-size: cover;
+    background-image: url(/images/backgroung.avif);
+    background-repeat: no-repeat;
+    background-position: top;
+}
+      }
+      @media (min-width: 600px){
+
+.roo5:before {
+    top: 94px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: "";
+    opacity: 1;
+    z-index: -1;
+    position: absolute;
+    background: linear-gradient(180deg, rgba(2,0,36,0) 18%, rgba(46,42,87,1) 100%), linear-gradient(360deg, rgba(2,0,36,0) 10%, rgba(46,42,87,1) 100%);
+    max-height: 700px;
+    background-repeat: no-repeat;
+    background-position: top;
+}
       }
       .roo122 {
         width: 100%;
@@ -5707,3 +6019,102 @@
   .smootheffect{
     transition: transform 0.3s ease-in-out;
   }
+
+  /* chat box */
+  .intercom-lightweight-app {
+    position: fixed;
+    z-index: 2147483001;
+    width: 0;
+    height: 0;
+    font-family: intercom-font, "Helvetica Neue", "Apple Color Emoji", Helvetica, Arial, sans-serif;
+}
+.intercom-lightweight-app-launcher {
+  position: fixed;
+  z-index: 2147483003;
+  padding: 0 !important;
+  margin: 0 !important;
+  border: none;
+  bottom: 20px;
+  left: 20px;
+  max-width: 48px;
+  width: 48px;
+  max-height: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background: #61af5a;
+  cursor: pointer;
+  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.06), 0 2px 32px 0 rgba(0, 0, 0, 0.16);
+  transition: transform 167ms cubic-bezier(0.33, 0.00, 0.00, 1.00);
+  box-sizing: content-box;
+}
+.intercom-lightweight-app-launcher-icon-open {
+  opacity: 1;
+  transform: rotate(0deg) scale(1);
+}
+.intercom-lightweight-app-launcher-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 48px;
+  height: 48px;
+  transition: transform 100ms linear, opacity 80ms linear;
+}
+.intercom-lightweight-app-launcher-icon-minimize {
+  opacity: 0;
+  transform: rotate(-60deg) scale(0);
+}
+.intercom-lightweight-app-launcher-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 48px;
+  height: 48px;
+  transition: transform 100ms linear, opacity 80ms linear;
+}
+.intercom-lightweight-app-launcher-icon-open svg {
+  width: 24px;
+  height: 24px;
+}
+.intercom-lightweight-app-launcher-icon-open svg path {
+  fill: rgb(255, 255, 255);
+}
+.css-ik19n1 {
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  position: relative;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  outline: 0px;
+  border: 0px;
+  margin: 0px;
+  cursor: pointer;
+  user-select: none;
+  vertical-align: middle;
+  appearance: none;
+  text-decoration: none;
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 0.875rem;
+  line-height: 1.75;
+  text-transform: uppercase;
+  min-height: 36px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  padding: 0px;
+  min-width: 0px;
+  width: 40px;
+  height: 40px;
+  z-index: 1050;
+  color: rgb(255, 255, 255);
+  background-color: rgb(120, 65, 238);
+  border-radius: 50px 0px 0px 50px;
+  box-shadow: rgb(80, 39, 167) 0px -3px 0px 0px inset, rgb(163, 126, 242) 0px 2px 0px 0px inset;
+}
