--- a/css/index.css
+++ b/css/index.css
@@ -2361,8 +2361,8 @@ button {
   width: 100%;
   margin: 0 auto;
   max-width: 1100px;
-  height: 500px;
-  overflow: hidden;
+  /* height: 500px;
+  overflow: hidden; */
 }
 
 .roo284 {
