--- a/css/register.css
+++ b/css/register.css
@@ -275,10 +275,24 @@
 .css-so2qui:invalid {
     box-shadow: none;
 }
-.MuiOutlinedInput-input:focus {
-    border:2px solid #A37EF2;
+
+.css-so2qui {
+    border: 2px solid transparent !important;
     border-radius: 12px;
 }
+.css-so2qui:hover{
+    border:2px solid #A37EF2 !important;
+    border-radius: 12px;
+}
+.hover1{
+    border: 2px solid transparent !important;
+    border-radius: 12px;
+}
+.hover1:hover{
+    border:2px solid #A37EF2 !important;
+    border-radius: 12px; 
+}
+
 .css-so2qui {
     font: inherit;
     letter-spacing: inherit;
@@ -295,6 +309,35 @@
     animation-duration: 10ms;
     padding: 10px 12px;
     height: 24px;
+    font-weight: 500 !important;
+    color: #7B6CB9 !important;
+}
+.css-so2qui1 {
+    font: inherit;
+    letter-spacing: inherit;
+    color: currentcolor;
+    border: 0px;
+    box-sizing: content-box;
+    background: none;
+    margin: 0px;
+    -webkit-tap-highlight-color: transparent;
+    display: block;
+    min-width: 0px;
+    width: 100%;
+    animation-name: mui-auto-fill-cancel;
+    animation-duration: 10ms;
+    padding: 10px 12px;
+    height: 24px;
+    font-weight: 500 !important;
+    color: #7B6CB9 !important;
+}
+.css-so2qui1::placeholder{
+    font-weight: 500 !important;
+    color: #7B6CB9 !important;
+}
+.css-so2qui::placeholder{
+    font-weight: 500 !important;
+    color: #7B6CB9 !important;
 }
 .css-igs3ac {
     text-align: left;
@@ -355,6 +398,7 @@
     font-size: 0.75rem;
     line-height: 1rem;
 }
+
 .css-r8pegv {
     display: inline-flex;
     -webkit-box-align: center;
@@ -372,7 +416,7 @@
     vertical-align: middle;
     appearance: none;
     text-decoration: none;
-    border-radius: 50%;
+    border-radius: 100px;
     color: rgba(0, 0, 0, 0.6);
     padding: 0px;
     margin: 10px;
@@ -382,7 +426,6 @@
 .css-1m9pwf3 {
     cursor: inherit;
     position: absolute;
-    /* opacity: 0; */
     background:transparent !important;
     width: 100%;
     height: 100%;
@@ -391,6 +434,11 @@
     margin: 0px;
     padding: 0px;
     z-index: 1;
+    border: transparent;
+    border-radius: 20px !important;
+}
+input[type="checkbox"] {
+    background-color: red !important;
 }
 .css-ze3sig {
     display: flex;
@@ -402,7 +450,10 @@
     width: 20px;
     -webkit-box-align: center;
     align-items: center;
+   
 }
+
+  
 .roo399 > span {
     margin: 0;
     font-size: 0.75rem;
@@ -465,7 +516,7 @@
     width: 5px;
     height: 2px;
     /* background-color: rgb(255, 255, 255); */
-    /* border-radius: 16px; */
+    border-radius: 16px;
 }
 .css-13y91uw {
     margin: 0px;
@@ -497,24 +548,10 @@
     margin-top: 50px;
     margin-bottom: 10px;
 }
-/* .css-tqtxkk p#button-text::before {
-    content: "Play Now";
-    position: absolute;
-    -webkit-text-stroke: 2px rgb(197, 106, 24);
-    left: 2px;
-    z-index: -1;
-}
-.css-tqtxkk  p#button-text::after {
-    content: "Play Now";
-    position: absolute;
-    -webkit-text-stroke: 2px rgb(197, 106, 24);
-    left: 2px;
-    top: 3px;
-    z-index: -1;
-} */
+
 #button-text font{
    
-  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+  -webkit-text-fill-color: white; 
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: 2px rgb(197, 106, 24);
 }
