--- a/css/register.css
+++ b/css/register.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Roboto", "sans-serif !important";
 }
 .font{
     font-family: "Roboto", "sans-serif !important";
