--- a/css/register.css
+++ b/css/register.css
@@ -322,7 +322,7 @@
     padding: 10px 12px;
     height: 24px;
     font-weight: 500 !important;
-    color: #7B6CB9 !important;
+    color: white;
 }
 .css-so2qui1 {
     font: inherit;
